# microservices-benchmark

./: .dockerignore  .gitignore  DesignDoc.md  README.md  SDE_Major_Presentation.pptx  docker-compose-grpc.yml  docker-compose-rest.yml  docker-compose.yml  pyproject.toml
deployment/docker/grpc/: Dockerfile
deployment/docker/prometheus/: prometheus.yml
deployment/docker/rest/: Dockerfile
proto/: service_definitions.proto
src/grpc_services/: server.py
src/grpc_services/services/: payload_service.py  simple_service.py  stream_service.py
src/grpc_services/utils/: metrics.py
src/rest_services/: main.py  middleware.py
src/rest_services/models/: schemas.py
src/rest_services/routers/: payload_router.py  simple_router.py  stream_router.py
src/rest_services/utils/: metrics.py
tests/load_tests/: grpc_tests.py  rest_tests.py
tests/unit_tests/: test_grpc.py
